--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "dm",
-	"token" : "OTE5MDQzNDYwMDQyOTgxMzc2.YbQD6w.zyzpywlcS3A8OYYcn5cCMzDGI-I",
+	"prefix" : "+",
+	"token" : "OTM5Nzc5NDQ0NTczMzQ3OTAw.Yf9zzw.4vbbEuoiuW1oo4hsvzMImftxMN8",
 	"delay" : "1",
 	"log_dms" : "on"
 }
